# loaa

./: .dockerignore  .env.example  .envrc  .envrc.local  .gitignore  .mcp.json  AGENTS.md  Caddyfile  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  TESTING.md  create_transactions.sh  devenv.nix  devenv.yaml  docker-compose.yml  justfile  mcp-config.json  test-oauth.sh
.beads/: issues.jsonl
.github/workflows/: README.md  deploy.yml  setup-infrastructure.yml
crates/core/: Cargo.toml
crates/core/examples/: test_embedded_db.rs
crates/core/src/: auth.rs  config.rs  error.rs  events.rs  lib.rs
crates/core/src/db/: connection.rs  kid.rs  ledger.rs  mod.rs  task.rs  user.rs
crates/core/src/models/: kid.rs  ledger.rs  mod.rs  task.rs  user.rs
crates/core/src/workflows/: mod.rs  task_completion.rs
crates/core/tests/: task_completion_workflow.rs  task_repository.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: auth.rs  lib.rs  main.rs
crates/web/: Cargo.toml  Leptos.toml
crates/web/app/: index.html
crates/web/src/: app.rs  components.rs  dto.rs  lib.rs  main.rs  mcp.rs  oauth.rs  server_functions.rs  sse.rs
crates/web/style/: main.css
docs/: README.md  architecture.md  authentication.md  deployment-github-actions.md  deployment.md  oauth-jwt-implementation.md  process-compose.md  roadmap.md  running-locally.md  tech-stack.md  vision.md
terraform/: .gitignore  .terraform.lock.hcl  main.tf  variables.tfvars.example
