[package]
name = "loaa-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
anyhow = "1.0"
thiserror = "1.0"
surrealdb = { version = "2.3", features = ["protocol-ws", "kv-rocksdb"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
rust_decimal_macros = "1.33"
tempfile = "3.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
