[package]
name = "loaa-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "loaa_mcp"
path = "src/lib.rs"

[[bin]]
name = "loaa-mcp"
path = "src/main.rs"

[dependencies]
loaa-core = { path = "../core" }
rmcp = { version = "0.8.5", features = ["server", "macros", "transport-streamable-http-server"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.37"
uuid = { version = "1.11", features = ["v4", "serde"] }
schemars = "1.0"
axum = "0.8"
jsonwebtoken = "9.3"
