[package]
name = "loaa-web"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "loaa-web"
path = "src/main.rs"
required-features = ["ssr"]

[[bin]]
name = "seed"
path = "src/bin/seed.rs"
required-features = ["ssr"]

[package.metadata.leptos]
output-name = "loaa-web"
bin-target = "loaa-web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
reload-port = 3002
browserquery = "defaults"
watch = true
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

[dependencies]
loaa-core = { path = "../core", optional = true }
leptos = { version = "0.6", default-features = false }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", default-features = false }
leptos_router = { version = "0.6", default-features = false }
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
rust_decimal_macros = "1.33"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tower-sessions = { version = "0.13", optional = true }
argon2 = { version = "0.5", optional = true, features = ["std"] }
rand = { version = "0.8", optional = true }
jsonwebtoken = { version = "9.3", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
uuid = { version = "1.11", features = ["v4", "serde"], optional = true }
loaa-mcp = { path = "../mcp", optional = true }
serde_json = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }
futures = { version = "0.3", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:loaa-core",
    "dep:tower-sessions",
    "dep:argon2",
    "dep:rand",
    "dep:jsonwebtoken",
    "dep:sha2",
    "dep:base64",
    "dep:uuid",
    "dep:loaa-mcp",
    "dep:serde_json",
    "dep:anyhow",
    "dep:tokio-stream",
    "dep:futures",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
